--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,11 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": "^8.0",
+        "illuminate/config": "^8.0 || ^9.0",
+        "illuminate/database": "^8.53 || ^9.0",
+        "illuminate/support": "^8.0 || ^9.0",
+        "spatie/laravel-package-tools": "^1.6.3"
+    }
 }
